syntax = "proto3";

package voucher;

option go_package = "github.com/kaolnwza/muniverse/voucher/proto/pb";

message VoucherCodeRequest {
  string voucher_code = 1;
}

message VoucherResponse {
  string voucher_name = 1;
  string discount_type = 2;
  int32 discount = 3;
  int32 voucher_quantity = 4;
  string expired_at = 5;
  bool status = 6;
}

message VoucherStatusResponse {
  string status = 1;
}

service VoucherService {
  rpc ValidateVoucherCode(VoucherCodeRequest) returns (VoucherStatusResponse);
  rpc GetVoucherByCode(VoucherCodeRequest) returns (VoucherResponse);
};

